--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "supervisor ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.10.2",
-    "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
-    "express": "~4.11.1",
-    "jade": "~1.9.1",
-    "morgan": "~1.5.1",
-    "pg": "^4.2.0",
-    "serve-favicon": "~2.2.0"
+    "koa": "^1.0.0",
+    "koa-bodyparser": "^2.0.1",
+    "koa-favicon": "^1.2.0",
+    "koa-hbs": "^0.7.0",
+    "koa-morgan": "^0.4.0",
+    "koa-mount": "^1.3.0",
+    "koa-router": "^5.2.3",
+    "koa-static": "^1.4.9",
+    "pg": "^4.2.0"
   },
   "devDependencies": {
     "supervisor": "~0.7.1"
